// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Problems (Integration) User can create a riddle Problem 1`] = `
Object {
  "answered": false,
  "createdBy": "user1",
  "id": 1,
  "query": "How much wood would a woodchuck chuck if a woodchuck could chuck wood?",
  "type": "riddle",
}
`;

exports[`Problems (Integration) User can create an expression Problem 1`] = `
Object {
  "answered": false,
  "createdBy": "user1",
  "id": 2,
  "query": "5+5",
  "type": "expression",
}
`;

exports[`Problems (Integration) User can list Problems 1`] = `
Array [
  Object {
    "answered": false,
    "createdBy": "user1",
    "id": 1,
    "query": "How much wood would a woodchuck chuck if a woodchuck could chuck wood?",
    "type": "riddle",
  },
  Object {
    "answered": false,
    "createdBy": "user1",
    "id": 2,
    "query": "5+5",
    "type": "expression",
  },
]
`;

exports[`Problems (Integration) User can list Problems filtered by type 1`] = `
Array [
  Object {
    "answered": false,
    "createdBy": "user1",
    "id": 1,
    "query": "How much wood would a woodchuck chuck if a woodchuck could chuck wood?",
    "type": "riddle",
  },
]
`;
